<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:textColorHint="@color/colorPrimary"
        android:id="@+id/username"
        android:hint="@string/txtUserName"
        android:layout_marginRight="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:textColorHint="@color/colorPrimary"
        android:id="@+id/password"
        android:hint="@string/txtPassword"
        android:layout_marginRight="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:textColor="@color/colorPrimary"
        android:id="@+id/btn_ok"
        android:layout_marginRight="@dimen/margin_top"
        android:layout_gravity="right"
        android:text="@string/txtOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>