<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/txtLogin"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/txtLoginSize"
        android:textStyle="bold" />

    <include layout="@layout/activity_enter" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/margin_top"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/txtRegister"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/margin_top"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/txtChangePassword"
        android:textStyle="italic" />
</LinearLayout>